<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/txtNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/rgNacionalidad"
        android:layout_width="236dp"
        android:layout_height="131dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNombre">

        <RadioButton
            android:id="@+id/rb_Extranjero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="mostrarNacionalidad"
            android:text="@string/radioButtonProductoExtranjero" />

        <RadioButton
            android:id="@+id/rb_Nacional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="mostrarNacionalidad"
            android:text="@string/producto_nacional" />
    </RadioGroup>

    <Button
        android:id="@+id/btnMostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="176dp"
        android:onClick="mostrar"
        android:text="@string/btnMostrarNacionalidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgNacionalidad" />

    <CheckBox
        android:id="@+id/cb_Acepto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="aceptar"
        android:text="@string/acepto_los_terminos_sin_leerlos"
        app:layout_constraintEnd_toEndOf="@+id/btnMostrar"
        app:layout_constraintStart_toStartOf="@+id/btnMostrar"
        app:layout_constraintTop_toBottomOf="@+id/btnMostrar" />

    <TextView
        android:id="@+id/txtError"
        android:layout_width="248dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/cb_Acepto"
        app:layout_constraintStart_toStartOf="@+id/cb_Acepto"
        app:layout_constraintTop_toBottomOf="@+id/cb_Acepto" />

</androidx.constraintlayout.widget.ConstraintLayout>